@@ -25,23 +25,19 @@ sub items       { @{ shift->{list} } }
 sub change_at   { shift->{list}[shift] }
 sub last_change { return shift->{list}[ -1 ] }
 
-sub _lookup {
-    my ( $self, $key ) = @_;
-    if ($key =~ /\A[@]?((?:LA|FIR)ST)\z/) {
-        my $change = $self->{list}[0] || return undef;
-        my $engine = $change->plan->sqitch->engine;
-        $key = (
-            $1 eq 'LAST'
-                ? $engine->latest_change_id
-                : $engine->earliest_change_id
-        ) || return undef;
-    }
-    return $self->{lookup}{$key};
+# Like [:punct:], but excluding _. Copied from perlrecharclass.
+my $punct = q{-!"#$%&'()*+,./:;<=>?@[\\]^`{|}~};
+
+sub _dbsymtag($) {
+    # Return LAST or FIRST if it is a DB symbolic tag.
+    $_[0] =~ /\A[@]?((?:LA|FIR)ST)(?:(?<![$punct])([~^])(?:(\2)|(\d+))?)?\z/ or return;
+    return $1;
 }
 
-sub _offset {
+sub _offset($) {
+    use Test::More;
     # Look for symbolic references.
-    if ( $_[0] =~ s{([~^])(?:(\1)|(\d+))?\z}{} ) {
+    if ( $_[0] =~ s{(?<![$punct])([~^])(?:(\1)|(\d+))?\z}{} ) {
         my $offset = $3 // ($2 ? 2 : 1);
         $offset *= -1 if $1 eq '^';
         return $offset;
@@ -50,11 +46,30 @@ sub _offset {
     }
 }
 
+sub _lookup {
+    my ( $self, $key ) = @_;
+    my $symtag = _dbsymtag $key or return $self->{lookup}{$key};
+    my $change = $self->{list}[0] || return undef;
+    my $engine = $change->plan->sqitch->engine;
+    my $offset = _offset $key;
+    $key = do {
+        if ($symtag eq 'LAST') {
+            # Nothing comes after the last change.
+            $offset > 0 ? undef : $engine->latest_change_id(abs $offset);
+        } else {
+            # Nothing comes before the first change.
+            $offset < 0 ? undef : $engine->earliest_change_id($offset);
+        }
+    } || return undef;
+
+    return $self->{lookup}{$key};
+}
+
 sub index_of {
     my ( $self, $key ) = @_;
 
-    # Look for symbolic references.
-    if ( my $offset = _offset $key ) {
+    # Look for non-deployed symbolic references.
+    if ( !_dbsymtag($key) && ( my $offset = _offset $key ) ) {
         my $idx = $self->_index_of( $key ) // return undef;
         $idx += $offset;
         return $idx < 0 ? undef : $idx > $#{ $self->{list} } ? undef : $idx;
@@ -99,8 +114,8 @@ sub _index_of {
 sub first_index_of {
     my ( $self, $key, $since ) = @_;
 
-    # Look for symbolic references.
-    if ( my $offset = _offset $key ) {
+    # Look for non-deployed symbolic references.
+    if ( !_dbsymtag $key && ( my $offset = _offset $key ) ) {
         my $idx = $self->_first_index_of( $key, $since ) // return undef;
         $idx += $offset;
         return $idx < 0 ? undef : $idx > $#{ $self->{list} } ? undef : $idx;
